finished home and team page

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -26,8 +26,16 @@
 
   <body class="<%= page_classes %>">
 
+<!--     call navbar.html.erb partial -->
     <%= partial "navbar" %>
+
+<!--     call page partial -->
+
     <%= yield %>
+
+<!--     call _footer.html.erb partial -->
+    <%= partial "footer" %>
+
 
   </body>
 </html>
