--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,154 @@
----
-title: Le Wagon Middleman boilerplate
----
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Airbnb home</title>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:300,400,500,700">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
-<div class="welcome text-center padded">
-  <h1>Welcome to Middleman</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p>
-</div>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- Leave those next 4 lines if you care about users using IE8 -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+   <!-- Your banner code -->
+    <div class="wrapper-grey text-center">
+      <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('background.jpg');">
+        <div class="banner-content">
+          <h1>Welcome Aryana</h1>
+          <h2>Here is your page</h2>
+          <a class="btn btn-primary btn-lg">GET IT</a>
+        </div>
+      </div>
+      </div>
+
+    <!-- Your features code -->
+    <div class="text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-lg-3">
+             <%= image_tag "globe.png" %>
+            <h3>Discover the world</h3>
+            <p>The earth is your new home.</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-lg-3">
+            <%= image_tag "dollar.png" %>
+            <h3>Pay online</h3>
+            <p>No cash issues anymore.</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-lg-3">
+             <%= image_tag "beer.png" %>
+            <h3>Meet people</h3>
+            <p>Discover new culture and lifestyle.</p>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-lg-3">
+             <%= image_tag "heart.png" %>
+            <h3>Share and love</h3>
+            <p>Join a community you will love.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <!-- Your cards code -->
+
+     <div class="text-center">
+      <div class="container">
+
+      <h1>Your next trip</h1>
+        <div class="row">
+
+          <div class="col-xs-12 col-sm-4 col-lg-2">
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/background.jpg');">
+              <div class="card-category">Popular</div>
+              <div class="card-description">
+                <h2>Some stuff</h2>
+                <p>Very cool stuff, useful and smart</p>
+              </div>
+               <%= image_tag "seb.jpg", class: "card-user avatar img-circle" %>
+              <%= link_to "#", "team.html", class: "card-link" %>
+            </div>
+          </div>
+           <div class="col-xs-12 col-sm-4 col-lg-2">
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/background.jpg');">
+              <div class="card-category">Popular</div>
+              <div class="card-description">
+                <h2>Some stuff</h2>
+                <p>Very cool stuff, useful and smart</p>
+              </div>
+              <%= image_tag "anne.png", class: "card-user avatar img-circle" %>
+               <%= link_to "#", "team.html", class: "card-link" %>
+            </div>
+          </div>
+
+           <div class="col-xs-12 col-sm-4 col-lg-2">
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/background.jpg');">
+              <div class="card-category">Popular</div>
+              <div class="card-description">
+                <h2>Some stuff</h2>
+                <p>Very cool stuff, useful and smart</p>
+              </div>
+               <%= image_tag "romain.png", class: "card-user avatar img-circle" %>
+               <%= link_to "#", "team.html", class: "card-link" %>
+            </div>
+          </div>
+
+
+
+       </div>
+    </div>
+
+       <!-- Your newsletter code -->
+
+          <h3>Get news from us</h3>
+          <p>Leave us your mail and get news from us</p>
+         <form class="form-inline">
+          <div class="form-group">
+            <input type="email" class="form-control" id="email" placeholder="Enter email">
+          </div>
+          <button type="subscribe" class="btn btn-primary btn-lg">Submit</button>
+        </form>
+
+      </div>
+    </div>
+
+    <!-- Your map code -->
+
+    <div id="map" style="width: 100%; height: 400px;"></div>
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+    <script type="text/javascript">
+      var myLatlng = new google.maps.LatLng(48.8655909, 2.378983);
+
+      var myOptions = {
+        zoom: 16,
+        center: myLatlng,
+        scrollwheel: false,
+        mapTypeId: google.maps.MapTypeId.ROADMAP,
+        styles: [] // TODO: replace [] by array from https://snazzymaps.com/
+      };
+
+      var map = new google.maps.Map(document.getElementById('map'), myOptions);
+      var marker = new google.maps.Marker({
+        position: myLatlng,
+        map: map,
+        title: "You are here!"
+      });
+    </script>
+
+    <!-- Your footer code -->
+
+    <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  </body>
+</html>
