--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,22 +1,3 @@
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Airbnb home</title>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:300,400,500,700">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- Leave those next 4 lines if you care about users using IE8 -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
    <!-- Your banner code -->
     <div class="wrapper-grey text-center">
       <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('background.jpg');">
@@ -60,51 +41,26 @@
 
     <!-- Your cards code -->
 
-     <div class="text-center">
+    <div class="text-center">
       <div class="container">
 
       <h1>Your next trip</h1>
         <div class="row">
 
-          <div class="col-xs-12 col-sm-4 col-lg-2">
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/background.jpg');">
-              <div class="card-category">Popular</div>
-              <div class="card-description">
-                <h2>Some stuff</h2>
-                <p>Very cool stuff, useful and smart</p>
+          <% ["anne", "seb", "romain"].each do |member| %>
+            <div class="col-xs-12 col-sm-4 col-lg-2">
+              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/background.jpg');">
+                <div class="card-category">Popular</div>
+                <div class="card-description">
+                  <h2>Some stuff</h2>
+                  <p>Very cool stuff, useful and smart</p>
+                </div>
+                 <%= image_tag "#{member}.jpg", class: "card-user avatar img-circle" %>
+                <%= link_to "#", "team.html", class: "card-link" %>
               </div>
-               <%= image_tag "seb.jpg", class: "card-user avatar img-circle" %>
-              <%= link_to "#", "team.html", class: "card-link" %>
             </div>
-          </div>
-           <div class="col-xs-12 col-sm-4 col-lg-2">
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/background.jpg');">
-              <div class="card-category">Popular</div>
-              <div class="card-description">
-                <h2>Some stuff</h2>
-                <p>Very cool stuff, useful and smart</p>
-              </div>
-              <%= image_tag "anne.png", class: "card-user avatar img-circle" %>
-               <%= link_to "#", "team.html", class: "card-link" %>
-            </div>
-          </div>
-
-           <div class="col-xs-12 col-sm-4 col-lg-2">
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/background.jpg');">
-              <div class="card-category">Popular</div>
-              <div class="card-description">
-                <h2>Some stuff</h2>
-                <p>Very cool stuff, useful and smart</p>
-              </div>
-               <%= image_tag "romain.png", class: "card-user avatar img-circle" %>
-               <%= link_to "#", "team.html", class: "card-link" %>
-            </div>
-          </div>
-
-
-
-       </div>
-    </div>
+          <%end%>
+        </div>
 
        <!-- Your newsletter code -->
 
@@ -150,5 +106,4 @@
     <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  </body>
-</html>
+
