--- a/source/stylesheets/layout/_navbar.css.scss
+++ b/source/stylesheets/layout/_navbar.css.scss
@@ -40,11 +40,11 @@
 
 /* Navbar standard link */
 .navbar-wagon-link {
-  color: #616668;
+  color: $gray;
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: $red;
   text-decoration: none;
 }
 
@@ -54,15 +54,15 @@
   padding: 0 20px;
   border-radius: 20em;
   line-height: 40px;
-  background-color: #D23333;
+  background-color: $red;
   color: white;
   font-size: 14px;
-  border: 2px solid #D23333;
+  border: 2px solid $red;
 }
 .navbar-wagon-button:hover {
   color: white;
-  background: #D23333;
-  border-color: #ac2626;
+  background: $red;
+  border-color: $red;
 }
 
 /* Navbar search form */
@@ -75,7 +75,7 @@
 }
 .navbar-wagon-search-btn {
   line-height: 40px;
-  color: #E6E6E6;
+  color: $gray-lighter;
   border: none;
   background: transparent;
   position: absolute;
@@ -88,8 +88,8 @@
   transition: all 0.15s ease;
   line-height: 40px;
   font-weight: lighter;
-  color: #666666;
-  border: 1px solid #E6E6E6;
+  color: $gray;
+  border: 1px solid white;
   border-radius: 5px;
   padding: 0 10px;
   font-size: 14px;
@@ -102,8 +102,8 @@
 /* Navbar dropdown menu */
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
+  box-shadow: 1px 1px 4px $gray-lighter;
+  border-color: $gray-lighter;
 }
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
@@ -124,8 +124,25 @@
   position: absolute;
   right: 10px;
   top: -6px;
-  background-color: white;
+  background-color: $gray-lighter;
   transform: rotate(45deg);
-  border-left: 1px solid #E6E6E6;
-  border-top: 1px solid #E6E6E6;
+  border-left: 1px solid $gray-lighter;
+  border-top: 1px solid $gray-lighter;
 }
+
+.fa-envelope-o {
+  color: $gray-light;
+}
+
+.fa-envelope-o:hover {
+  color: $red;
+}
+
+.fa-bars {
+  color: $gray-light;
+}
+
+.fa-bars:hover {
+  color: $red;
+}
+
