--- a/source/stylesheets/pages/_team.scss
+++ b/source/stylesheets/pages/_team.scss
@@ -1,5 +1,12 @@
 .email {
-color:blue;
+color:$blue;
 font-size: 30px;
 }
 
+.fa-envelope {
+  color: $blue;
+}
+
+.enlarge-div {
+  padding: 100px;
+}
