--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-center"> Our Team </h1>
 
-  <ul class="list-inline text-center">
+  <ul class="list-inline text-center enlarge-div">
     <% ["anne", "seb", "romain"].each do |member| %>
       <li>
         <h3><%= member.capitalize %></h3>
