--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,32 @@
    <!-- Your banner code -->
     <div class="wrapper-grey text-center">
-      <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('background.jpg');">
+      <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('images/background.jpg');">
         <div class="banner-content">
           <h1>Welcome Aryana</h1>
           <h2>Here is your page</h2>
-          <a class="btn btn-primary btn-lg">GET IT</a>
+
+
+            <form class="form-inline">
+              <div class="form-group">
+                <input type="text" class="form-control" id="checkin" placeholder="checkin">
+              </div>
+               <div class="form-group">
+                <input type="text" class="form-control" id="checkout" placeholder="checkout">
+              </div>
+
+              <div class="form-group">
+                <select class=form-control>
+                  <option value=un>1 person</option>
+                  <option value=deux>2 people</option>
+                  <option value=trois>3 people</option>
+                </select>
+              </div>
+              <button type="subscribe" class="btn btn-primary btn-lg">Search</button>
+            </form>
+
         </div>
       </div>
-      </div>
+    </div>
 
     <!-- Your features code -->
     <div class="text-center">
@@ -47,16 +66,18 @@
       <h1>Your next trip</h1>
         <div class="row">
 
-          <% ["anne", "seb", "romain"].each do |member| %>
+          <% data.flats.each do |member, flat| %>
             <div class="col-xs-12 col-sm-4 col-lg-2">
-              <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('images/background.jpg');">
-                <div class="card-category">Popular</div>
+               <div class="card" style="background-image: url('<%= image_path flat.picture %>');">
+                <div class="card-category"><%= flat.city %></div>
                 <div class="card-description">
-                  <h2>Some stuff</h2>
-                  <p>Very cool stuff, useful and smart</p>
+                  <h2><%= flat.name %></h2>
+                  <p><%= flat.summary %></p>
                 </div>
                  <%= image_tag "#{member}.jpg", class: "card-user avatar img-circle" %>
-                <%= link_to "#", "team.html", class: "card-link" %>
+                <%= link_to "#", "flats/#{member}.html", class: "card-link" %>
+                <p class="card-rating"><%= flat.rating %> <i class="fa fa-star" aria-hidden="true"></i>
+</p>
               </div>
             </div>
           <%end%>
