--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -6,6 +6,12 @@
   width: 100px;
   border-radius: 50%;
 }
+
+.avatar-very-large {
+  width: 150px;
+  border-radius: 50%;
+}
+
 .avatar-bordered {
   width: 30px;
   border-radius: 50%;
