--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -21,3 +21,21 @@
   color: rgba(255, 255, 255, 0.7);
   margin-bottom: 20px;
 }
+
+.small-banner {
+  height: 50vh;
+  background-size: cover !important;
+  background-image: image-url('background.jpg');
+  margin-bottom: 30px;
+}
+
+.wrapper-grey {
+  background-color: $gray-lighter;
+  padding:30px;
+}
+
+.wrapper-grey-form {
+  background-color: $gray-lighter;
+  padding:30px;
+  margin: 30px 0;
+}
