--- a/source/stylesheets/layout/_navbar.css.scss
+++ b/source/stylesheets/layout/_navbar.css.scss
@@ -96,7 +96,7 @@
   outline: none;
 }
 .navbar-wagon-search-input:focus  {
-  border: 1px solid #CCCCCC;
+  border: 1px solid $gray-lighter;
 }
 
 /* Navbar dropdown menu */
